# AcidMaps

./: .gitignore  README  index.html
ams/: Doxyfile  README
ams/jni/: CMakeLists.txt  JCAdapter.cc  JCAdapterImpl.cc
ams/src/: CMakeLists.txt  acid_maps.cc  acid_maps.h
ams/test/: CMakeLists.txt  README  interpolations_test.cc
client/openlayers/: acidmaps.js  example.html  pycasso.js
examples/isolines/: README.md  archsites.sld  isolines.html
flex/lib/: .actionScriptProperties  .flexLibProperties  .project
geoserver/: README  index.html
geoserver/html/: index.html  reference.html
geoserver/jni/: CMakeLists.txt  JCAdapter.h  JCAdapterImpl.c  JCAdapterImpl.cc  README
geoserver/js/: openlayerclient.html
geoserver/plugin/: README  build.xml  javadoc.xml  pom.xml
html/demo/: index.html
lib/: CmakeLists.txt  Doxyfile  README  acid.c  acid.h  clean.sh  compile.sh  gradients.h  pycasso.c  pycasso.h  test.sh
lib/source/: CMakeLists.txt  acid_maps.cc  acid_maps.h  ams.cpp  (+3 more)
lib/test/: CMakeLists.txt  acid_maps_test.cc  interpolations_test.cc  test_runner.cc
lib/test/interpolate/: dummy_interpolation_test.cc
lib/test/render/: gradient_renderer_intervals_test.cc  sparse_renderer_intervals_test.cc  sparse_renderer_test.cc
lib/test/simplify/: copy_simplifier_test.cc  dummy_simplifier_test.cc  extremes_simplifier_test.cc  grid_simplifier_test.cc  none_simplifier_test.cc  random_simplifier_test.cc
lib/test/transform/: transformer_test.cc
python/: README
ruby/: README
server/: acid.py  config.ini  crossdomain.xml  help  pycaso.py  pycasso.py
(+266 files in other folders)
